[Maven] Bump org.gaul:modernizer-maven-plugin from 3.3.0 to 3.4.0 (#129)